<resources>
    <string name="app_name" translatable="false">MoneyManagement</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="setting">Setting</string>
    <string name="user_setting">User Setting</string>
    <string name="all_category">All Category</string>
    <string name="language_setting">Language Setting</string>


    <string name="about">About</string>
    <string name="log_out">Log Out</string>
    <string name="en">en</string>
    <string name="vn">vn</string>

</resources>